Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -256,10 +256,10 @@ header .widget.extendednavigation {
   float: left;
   position: relative;
   z-index:1;
+  width: 100%;
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
